--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ Gray E5E5E5
 
 /* Fonts */
 
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Stick+No+Bills:wght@200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200;300;400;500;600;700;800&display=swap");
 
 /* Type Styles */
 
@@ -157,6 +157,15 @@ h2 {
 h3 {
   font-size: 18px;
 }
+button {
+  display: flex;
+  margin-top: 20px;
+  padding: 6px 12px;
+  color: #f6f8ff;
+  background-color: #f29602;
+  border: none;
+  border-radius: 5px;
+}
 h1,
 h2,
 h3,
@@ -164,6 +173,8 @@ p {
   color: #f6f8ff;
   font-family: "Open Sans", sans-serif;
   font-family: "Stick No Bills", sans-serif;
+  text-align: left;
+  padding-top: 5px;
 }
 footer,
 header,
@@ -198,6 +209,8 @@ li {
   background-color: #154e7a;
   height: 400px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .macarons {
   width: 300px;
@@ -210,7 +223,6 @@ article {
   width: 50%;
   display: flex;
   flex-direction: column;
-  flex-shrink: ;
 }
 
 .section-two {
