Updated Section colors and added new image

--- a/style.css
+++ b/style.css
@@ -140,18 +140,14 @@ Gray E5E5E5
 
 */
 
-/* Fonts */
-
-@import url("https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200;300;400;500;600;700;800&display=swap");
-
 /* Type Styles */
 
 h1 {
-  font-weight: extra-bold;
+  font-weight: 700;
   font-size: 48px;
 }
 h2 {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 24px;
 }
 h3 {
@@ -169,12 +165,9 @@ button {
 h1,
 h2,
 h3,
-p {
-  color: #f6f8ff;
-  font-family: "Open Sans", sans-serif;
-  font-family: "Stick No Bills", sans-serif;
-  text-align: left;
-  padding-top: 5px;
+p,
+blockquote {
+  font-family: "Rubik", sans-serif;
 }
 footer,
 header,
@@ -189,6 +182,7 @@ header {
   height: 75px;
   background-color: #154e7a;
   padding-top: 20px;
+  color: #f6f8ff;
 }
 nav {
   display: flex;
@@ -201,39 +195,53 @@ ul {
 li {
   margin: 0 10px;
 }
+p {
+  font-size: 18px;
+}
 /* Class Styles */
 
 /* Section One */
 
 .section-one {
   background-color: #154e7a;
-  height: 400px;
+  color: #f6f8ff;
+  height: 440px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.macarons {
-  width: 300px;
-}
+
 .section-title {
   display: flex;
   justify-content: center;
-}
-article {
   width: 50%;
-  display: flex;
   flex-direction: column;
 }
+.section-title p {
+  width: 90%;
+  margin-top: 10px;
+}
 
+.coffee-truck {
+  width: 450px;
+  margin-right: 15px;
+  border-radius: 10px;
+}
 .section-two {
   background-color: #f6f8ff;
+  height: 400px;
+  color: #154e7a;
 }
 .section-three {
-  background-color: #824c71;
+  background-color: #e5e5e5;
+  height: 400px;
 }
 .section-four {
-  background-color: #e5e5e5;
+  background-color: #f6f8ff;
+  height: 400px;
 }
 footer {
-  background-color: #f29602;
+  background-color: #154e7a;
+  height: 100px;
+  color: #f6f8ff;
 }
