--- a/style.css
+++ b/style.css
@@ -154,6 +154,10 @@ h2 {
 h3 {
   font-size: 18px;
 }
+h4 {
+  font-size: 24px;
+  font-weight: 600;
+}
 button {
   display: flex;
   margin-top: 20px;
@@ -164,6 +168,11 @@ button {
   border-radius: 10px;
   font-size: 16px;
   font-weight: 700;
+}
+button:hover {
+  cursor: pointer;
+  background-color: #f6f8ff;
+  color: #0090cd;
 }
 h1,
 h2,
@@ -327,15 +336,21 @@ p {
   justify-content: center;
 }
 .section-four__container {
-  height: 40%;
+  height: 50%;
   background-color: #154e7a;
-  color: #e4e7eb;
+  color: #f6f8ff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
   padding: 0 100px;
+  margin: 0 100px;
+  font-weight: 300;
 }
+.section-four p {
+  padding-top: 6px;
+}
+
 footer {
   background-color: #154e7a;
   height: 100px;
